# SouthwestCheckin

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  Dockerfile  Makefile  README.rst  pytest.ini  setup.cfg  tox.ini
docs/: api.rst  conf.py  index.rst
src/swcheckin/: checkin.py  config.py  southwest.py  versiontools.py
src/swcheckin/cli/: __init__.py  __main__.py
src/swcheckin/utils/: openflights.py
tests/: __init__.py  checkin_test.py  circular_imports_test.py  my_vcr_test.py
tests/fixtures/cassettes/: test_api_key_fail.yml  test_bad_request.yml  test_checkin.yml  test_cli.yml  test_generate_headers.yml  test_reservation_lookup.yml
tests/utils/: __init__.py  cli_test.py  openflights_test.py  versiontools_test.py
