[aliases]
dists = clean --all sdist bdist_wheel

[bdist_wheel]
universal = 1

[metadata]
name = swcheckin
version = attr: swcheckin.utils.versiontools.get_self_version
description = Checks your flight reservation with Southwest and then checks you in at exactly 24 hours before your flight
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pyro2927/SouthwestCheckin
author = Joseph Pintozzi
author_email = oe@pintozzi.com
license = GNUv3+
license_file = LICENSE
classifiers =
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[options]
python_requires = >=3.7
package_dir =
  = src
packages = find_namespace:
zip_safe = True
include_package_data = True

install_requires =
  click
  humanfriendly
  pytz
  requests
  setuptools_scm
  uuid

setup_requires =
  setuptools_scm
  setuptools_scm_git_archive>=1.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  swcheckin = swcheckin.cli.__main__:main

[options.extras_require]
docs =
  sphinx
  sphinx-click
testing =
  pytest
  pytest-cov
  pytest-xdist
  vcrpy

[flake8]
max-line-length = 100
exclude = .git,.hg,.svn,__pycache__,.tox,.eggs,env
ignore =
  # TODO(shoginn): gradually address exceptions below:
  D100  # D100 Missing docstring in public module
  D101  # D101 Missing docstring in public class
  D102  # D102 Missing docstring in public method
  D103  # D103 Missing docstring in public function
  D104  # D104 Missing docstring in public package
  D105  # D105 Missing docstring in magic method
  D107  # D107 Missing docstring in __init__
  # yapf has a problem with D204
  D204  # D204 1 blank line required after class docstring
  # W503 is incompatible with W504
  W504  # W504 line break after binary operator
